--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!--CUSTOM CSS-->
     <link rel="stylesheet" href="assets/css/main.css">
     <script src="assets/js/csi.min.js"></script>
+    <script data-ad-client="ca-pub-3611051602961724" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body id="main">
