--- a/index.html
+++ b/index.html
@@ -339,7 +339,18 @@
     <!--CONTACT US SECTION-->
 
 
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- display-ad-general -->
+	<ins class="adsbygoogle"
+	     style="display:block"
+	     data-ad-client="ca-pub-3611051602961724"
+	     data-ad-slot="7733540939"
+	     data-ad-format="auto"
+	     data-full-width-responsive="true"></ins>
+	<script>
+	     (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+	
     <!--SOCIAL-->
     <div class="social my-5">
         <div class="wow content-title animated fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
